--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "babel-preset-react": "^6.16.0",
+    "jquery": "^3.1.1",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
