--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
+    "bootstrap-material-design": "^0.5.10",
+    "copycat-brunch": "^1.1.0",
     "jquery": "^3.1.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
@@ -22,6 +24,7 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
+    "less-brunch": "^2.7.1",
     "uglify-js-brunch": "~2.0.1"
   }
 }
